<resources>
    <string name="app_name">L04-reservation</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="num_of_pax">Number of Pax</string>
    <string name="select_date">Select Date: </string>
    <string name="select_time">Select Time: </string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non-smoking area</string>
    <string name="table_area">Table Area: </string>
    <string name="confirm">CONFIRM</string>
    <string name="reset">RESET</string>

</resources>